// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circular objects are not equal if circularity is not on the same property 1`] = `
Object {
  "a": Object {
    "a": [Circular],
  },
  "b": Object {
    "a": Object {
      "a": Object {
        "a": [Circular],
      },
    },
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "circularToDepth": 0,
        Symbol(circularVal): Object {
          "a": [Circular],
        },
      },
      "b": Object {
        "a": Object {
          "a": [Circular],
        },
      },
      "kind": "UPDATED",
      "path": "a",
    },
  ],
  "kind": "UPDATED",
  "path": undefined,
}
`;

exports[`Circular objects are not equal if circularity is not on the same property 2`] = `
Object {
  "a": Object {
    "x": Object {
      "x": [Circular],
    },
  },
  "b": Object {
    "x": [Circular],
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "x": Object {
          "x": [Circular],
        },
      },
      "b": Object {
        "circularToDepth": 0,
        Symbol(circularVal): Object {
          "x": [Circular],
        },
      },
      "kind": "UPDATED",
      "path": "x",
    },
  ],
  "kind": "UPDATED",
  "path": undefined,
}
`;

exports[`Circular objects properties with different circularity are not equal 1`] = `
Object {
  "a": Object {
    "x": Object {
      "y": [Circular],
    },
  },
  "b": Object {
    "x": Object {
      "y": [Circular],
    },
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "y": Object {
          "x": [Circular],
        },
      },
      "b": Object {
        "y": [Circular],
      },
      "childDiffs": Array [
        Object {
          "a": Object {
            "circularToDepth": 0,
            Symbol(circularVal): Object {
              "x": Object {
                "y": [Circular],
              },
            },
          },
          "b": Object {
            "circularToDepth": 1,
            Symbol(circularVal): Object {
              "y": [Circular],
            },
          },
          "kind": "UPDATED",
          "path": "y",
        },
      ],
      "kind": "UPDATED",
      "path": "x",
    },
  ],
  "kind": "UPDATED",
  "path": undefined,
}
`;

exports[`Circular objects properties with different circularity are not equal 2`] = `
Object {
  "a": Object {
    "x": Object {
      "x": Object {
        "y": [Circular],
      },
    },
  },
  "b": Object {
    "x": Object {
      "x": Object {
        "y": [Circular],
      },
    },
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "x": Object {
          "y": [Circular],
        },
      },
      "b": Object {
        "x": Object {
          "y": [Circular],
        },
      },
      "childDiffs": Array [
        Object {
          "a": Object {
            "y": Object {
              "x": [Circular],
            },
          },
          "b": Object {
            "y": [Circular],
          },
          "childDiffs": Array [
            Object {
              "a": Object {
                "circularToDepth": 1,
                Symbol(circularVal): Object {
                  "x": Object {
                    "y": [Circular],
                  },
                },
              },
              "b": Object {
                "circularToDepth": 2,
                Symbol(circularVal): Object {
                  "y": [Circular],
                },
              },
              "kind": "UPDATED",
              "path": "y",
            },
          ],
          "kind": "UPDATED",
          "path": "x",
        },
      ],
      "kind": "UPDATED",
      "path": "x",
    },
  ],
  "kind": "UPDATED",
  "path": undefined,
}
`;

exports[`Circular objects properties with the same circularity are equal 1`] = `
Object {
  "a": Object {
    "x": [Circular],
  },
  "b": Object {
    "x": [Circular],
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "circularToDepth": 0,
        Symbol(circularVal): Object {
          "x": [Circular],
        },
      },
      "b": Object {
        "circularToDepth": 0,
        Symbol(circularVal): Object {
          "x": [Circular],
        },
      },
      "kind": "EQUAL",
      "path": "x",
    },
  ],
  "kind": "EQUAL",
  "path": undefined,
}
`;

exports[`Circular objects properties with the same circularity are equal 2`] = `
Object {
  "a": Object {
    "x": Object {
      "x": [Circular],
    },
  },
  "b": Object {
    "x": Object {
      "x": [Circular],
    },
  },
  "childDiffs": Array [
    Object {
      "a": Object {
        "x": [Circular],
      },
      "b": Object {
        "x": [Circular],
      },
      "childDiffs": Array [
        Object {
          "a": Object {
            "circularToDepth": 1,
            Symbol(circularVal): Object {
              "x": [Circular],
            },
          },
          "b": Object {
            "circularToDepth": 1,
            Symbol(circularVal): Object {
              "x": [Circular],
            },
          },
          "kind": "EQUAL",
          "path": "x",
        },
      ],
      "kind": "EQUAL",
      "path": "x",
    },
  ],
  "kind": "EQUAL",
  "path": undefined,
}
`;

exports[`Objects marks updated field 1`] = `
Object {
  "a": Object {
    "a": 1,
    "b": 2,
  },
  "b": Object {
    "a": 1,
    "b": 3,
  },
  "childDiffs": Array [
    Object {
      "a": 1,
      "b": 1,
      "kind": "EQUAL",
      "path": "a",
    },
    Object {
      "a": 2,
      "b": 3,
      "kind": "UPDATED",
      "path": "b",
    },
  ],
  "kind": "UPDATED",
  "path": undefined,
}
`;
